--- a/index.HTML
+++ b/index.HTML
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
     <title>About Me - Gal Ben Artzi</title>
   </head>
   <body>
