--- a/index.HTML
+++ b/index.HTML
@@ -6,10 +6,14 @@
     <title>About Me - Gal Ben Artzi</title>
   </head>
   <body>
-    <img
-      src="Intel_photo.jpg"
-      alt="Me and co-workers engaged in conversation in the office corridor"
-    />
+    <div class="square-container">
+      <img
+        src="Images/me.jpg"
+        alt="Photo of me"
+        class="square-img"
+        id="cover-photo"
+      />
+    </div>
     <h1>Gal Ben Artzi</h1>
     <p>
       <em>
