add table of skills

--- a/index.HTML
+++ b/index.HTML
@@ -6,33 +6,138 @@
     <title>About Me - Gal Ben Artzi</title>
   </head>
   <body>
-    <div class="square-container">
-      <img
-        src="Images/me.jpg"
-        alt="Photo of me"
-        class="square-img"
-        id="cover-photo"
-      />
-    </div>
-    <h1>Gal Ben Artzi</h1>
-    <p>
-      <em>
-        Software Developer at Intel and Computer Science Student at Open
-        University
-      </em>
-    </p>
-    <p></p>
+    <table cellspacing="20">
+      <tr>
+        <td>
+          <div class="square-container">
+            <img
+              src="Images/me.jpg"
+              alt="Photo of me"
+              class="square-img"
+              id="cover-photo"
+            />
+          </div>
+        </td>
+        <td>
+          <h1>Gal Ben Artzi</h1>
+          <p>
+            <em>
+              Software Developer at Intel and Computer Science Student at Open
+              University
+            </em>
+          </p>
+        </td>
+      </tr>
+    </table>
     <hr />
-    <!-- Maybe put in here the cv (OpenU, Working, IDF...) -->
     <h3>Education</h3>
-    <ul>
-      <li>Computer Science - open University</li>
-      <li>Manor Cabri High School</li>
-    </ul>
+    <p class="education-header education">
+      Bachelor of Science: Computer Science
+    </p>
+    <p class="education-secondary-header education">
+      Open University - Current grade average - 95
+    </p>
+    <p class="education">
+      Relevant courses completed: Advanced Java programming and OOP, C
+      programming, Systems programming in Unix – Linux ,Data structures and
+      algorithms
+    </p>
+
+    <p class="education-header education">Web Developer Bootcamp</p>
+    <p class="education-secondary-header education">Udemy</p>
+    <p class="education">
+      Self-study of web development - CSS , HTML and JavaScript
+    </p>
+
+    <p class="education-header education">Software Development Course</p>
+    <p class="education-secondary-header education">Unistream</p>
+    <p class="education">Studies of Java, Linux and DataBase</p>
+
+    <p class="education-header education">Data System Course</p>
+    <p class="education-secondary-header education">IDF Intelligence Corps</p>
+    <p class="education">Studies of Excel, SQL, SNA</p>
+
+    <p class="education-header education">High School Diploma</p>
+    <p class="education-secondary-header education">Manor Cabri</p>
+    <p class="education">
+      5 points Math, 5 points English, 5 points Physics, 5 points Chemistry
+    </p>
+    <p class="education">Physics project based on a C++ model</p>
+
+    <hr />
+    <h3>Work Experience</h3>
+    <table cellspacing="15">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2022 - current</td>
+          <td>Software Engineer at Intel</td>
+        </tr>
+        <tr>
+          <td>2020 - 2021</td>
+          <td>
+            Research and Development Manager at The Ministry of Health of Israel
+          </td>
+        </tr>
+        <tr>
+          <td>2016 - 2019</td>
+          <td>Analyst and Project Manager at IDF - Intelligence Corps</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr />
     <h3>Skills</h3>
-    <ul>
-      <li>Problem Solving</li>
-      <li>Think out of the box</li>
-    </ul>
+    <table cellspacing="10">
+      <header>
+        <th>Programming languages</th>
+      </header>
+      <body>
+        <tr>
+          <td>Python</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Java</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>OOP</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Linux</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>C languange</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>C++</td>
+          <td>⭐⭐</td>
+        </tr>
+      </body>
+    </table>
+
+    <!-- Skills: Independent learning ability, Searching and finding solutions -->
+    <!-- Reliable team member, High written and oral expressiveness ...) -->
+    <!-- Thinking outside the box, Fluent english -->
   </body>
 </html>
