add contact me link un index.html

--- a/contact-me.html
+++ b/contact-me.html
@@ -9,7 +9,7 @@
     <p>🏠Address: Haifa</p>
     <p>📞Phone: 058-686-8181</p>
     <p>📧Email: benartzi4@gmail.com</p>
-
+    <p><a href="https://www.linkedin.com/in/gal-ben-artzi/">🔗Linkedin</a></p>
     <form
       action="mailto:benartzi4@gmail.com"
       method="post"
