--- a/index.HTML
+++ b/index.HTML
@@ -25,11 +25,13 @@
               Software Developer at Intel and Computer Science Student at Open
               University
             </em>
+            <p>Diligent and motivated computer science student with a desire to contribute and acquire skills in the world of software development. Valuable team member and curious self-learner who enjoys challenges and solving problems.</p>
           </p>
         </td>
       </tr>
     </table>
     <hr />
+    
     <h3>Education</h3>
     <p class="education-header education">
       Bachelor of Science: Computer Science
@@ -38,9 +40,27 @@
       Open University - Current grade average - 95
     </p>
     <p class="education">
-      Relevant courses completed: Advanced Java programming and OOP, C
-      programming, Systems programming in Unix – Linux ,Data structures and
-      algorithms
+      Included in the university president's list of honorees for the academic year 2021-2022 <br>
+      Relevant courses completed:
+      <br>
+      <ul>
+        <li>
+          Advanced Java programming and OOP
+        </li>
+        <li>
+          C programming
+        </li>
+        <li>
+          Algorithms
+        </li>
+        <li>
+          Systems programming in Unix – Linux
+        </li>
+        <li>
+          Data structures
+        </li>
+
+      </ul>
     </p>
 
     <p class="education-header education">Web Developer Bootcamp</p>
@@ -91,11 +111,8 @@
       </tbody>
     </table>
     <hr />
-    <h3>Skills</h3>
+    <h3>Programming languages  & Concepts</h3>
     <table cellspacing="10">
-      <header>
-        <th>Programming languages</th>
-      </header>
       <body>
         <tr>
           <td>Python</td>
@@ -135,9 +152,19 @@
         </tr>
       </body>
     </table>
+    <hr>
+    <h3>Qualities</h3>
+    <ul>
+      <li>Independent learning ability</li>
+      <li>Searching and finding solutions</li>
+      <li>Reliable team member</li>
+      <li>High written and oral expressiveness</li>
+      <li>Thinking outside the box</li>
+      <li>Fluent english</li>
 
-    <!-- Skills: Independent learning ability, Searching and finding solutions -->
-    <!-- Reliable team member, High written and oral expressiveness ...) -->
-    <!-- Thinking outside the box, Fluent english -->
+    </ul>
+    <hr>
+    <a href="contact-me.html">🤝Contact Me</a>
+
   </body>
 </html>
