add linkeding image to contact.html

--- a/contact-me.html
+++ b/contact-me.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contact Me</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <p>🏠Address: Haifa</p>
-    <p>📞Phone: 058-686-8181</p>
-    <p>📧Email: benartzi4@gmail.com</p>
-    <p><a href="https://www.linkedin.com/in/gal-ben-artzi/">🔗Linkedin</a></p>
+    <p>🏠 Address: Haifa</p>
+    <p>📞 Phone: 058-686-8181</p>
+    <p>📧 Email: benartzi4@gmail.com</p>
+    <p>
+      <img
+        id="linkedin-img"
+        src="Images/LinkedIn_icon.svg.png"
+        alt="LinkedIn Logo"
+      />
+      <a href="https://www.linkedin.com/in/gal-ben-artzi/" class="no-underline">
+        Linkedin
+      </a>
+    </p>
+
     <form
       action="mailto:benartzi4@gmail.com"
       method="post"
