--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     </ul>
     <hr>
-    <a href="contact-me.html">🤝 Contact Me</a>
+    <a class="no-underline" href="contact-me.html">🤝 Contact Me</a>
 
   </body>
 </html>
